upgrade to BCEL 6.0