@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,26 +12,26 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
+ *  limitations under the License.
  *
  */
 package org.apache.bcel.generic;
 
-import org.apache.bcel.util.ByteSequence;
-
 import java.io.DataOutputStream;
 import java.io.IOException;
+import org.apache.bcel.util.ByteSequence;
 
-/**
+/** 
  * BIPUSH - Push byte on stack
- * <p/>
+ *
  * <PRE>Stack: ... -&gt; ..., value</PRE>
  *
- * @author <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
- * @version $Id: BIPUSH.java 386056 2006-03-15 11:31:56Z tcurdt $
+ * @version $Id: BIPUSH.java 1627906 2014-09-26 22:41:39Z ebourg $
+ * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
  */
 public class BIPUSH extends Instruction implements ConstantPushInstruction {
 
+    private static final long serialVersionUID = -6859389515217572656L;
     private byte b;
 
 
@@ -42,8 +43,7 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
     }
 
 
-    /**
-     * Push byte on stack
+    /** Push byte on stack
      */
     public BIPUSH(byte b) {
         super(org.apache.bcel.Constants.BIPUSH, (short) 2);
@@ -54,7 +54,8 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * Dump instruction as byte code to stream out.
      */
-    public void dump(DataOutputStream out) throws IOException {
+    @Override
+    public void dump( DataOutputStream out ) throws IOException {
         super.dump(out);
         out.writeByte(b);
     }
@@ -63,7 +64,8 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * @return mnemonic for instruction
      */
-    public String toString(boolean verbose) {
+    @Override
+    public String toString( boolean verbose ) {
         return super.toString(verbose) + " " + b;
     }
 
@@ -71,21 +73,21 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * Read needed data (e.g. index) from file.
      */
-    protected void initFromFile(ByteSequence bytes, boolean wide) throws IOException {
+    @Override
+    protected void initFromFile( ByteSequence bytes, boolean wide ) throws IOException {
         length = 2;
         b = bytes.readByte();
     }
 
 
     public Number getValue() {
-        return new Integer(b);
+        return Integer.valueOf(b);
     }
 
 
-    /**
-     * @return Type.BYTE
+    /** @return Type.BYTE
      */
-    public Type getType(ConstantPoolGen cp) {
+    public Type getType( ConstantPoolGen cp ) {
         return Type.BYTE;
     }
 
@@ -98,7 +100,8 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
      *
      * @param v Visitor object
      */
-    public void accept(Visitor v) {
+    @Override
+    public void accept( Visitor v ) {
         v.visitPushInstruction(this);
         v.visitStackProducer(this);
         v.visitTypedInstruction(this);
