@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,12 +12,16 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
+ *  limitations under the License.
  *
  */
 package org.apache.bcel.generic;
 
+import java.util.ArrayList;
+import java.util.List;
 import org.apache.bcel.Constants;
+import org.apache.bcel.classfile.AnnotationEntry;
+import org.apache.bcel.classfile.Annotations;
 import org.apache.bcel.classfile.Attribute;
 import org.apache.bcel.classfile.Constant;
 import org.apache.bcel.classfile.ConstantObject;
@@ -26,25 +31,22 @@ import org.apache.bcel.classfile.Field;
 import org.apache.bcel.classfile.Utility;
 import org.apache.bcel.util.BCELComparator;
 
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-
-/**
+/** 
  * Template class for building up a field.  The only extraordinary thing
  * one can do is to add a constant value attribute to a field (which must of
  * course be compatible with to the declared type).
  *
- * @author <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
- * @version $Id: FieldGen.java 386056 2006-03-15 11:31:56Z tcurdt $
+ * @version $Id: FieldGen.java 1627906 2014-09-26 22:41:39Z ebourg $
+ * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
  * @see Field
  */
 public class FieldGen extends FieldGenOrMethodGen {
 
+    private static final long serialVersionUID = -6050448955000008261L;
     private Object value = null;
     private static BCELComparator _cmp = new BCELComparator() {
 
-        public boolean equals(Object o1, Object o2) {
+        public boolean equals( Object o1, Object o2 ) {
             FieldGen THIS = (FieldGen) o1;
             FieldGen THAT = (FieldGen) o2;
             return THIS.getName().equals(THAT.getName())
@@ -52,7 +54,7 @@ public class FieldGen extends FieldGenOrMethodGen {
         }
 
 
-        public int hashCode(Object o) {
+        public int hashCode( Object o ) {
             FieldGen THIS = (FieldGen) o;
             return THIS.getSignature().hashCode() ^ THIS.getName().hashCode();
         }
@@ -65,9 +67,9 @@ public class FieldGen extends FieldGenOrMethodGen {
      * associated with it as defined by setInitValue().
      *
      * @param access_flags access qualifiers
-     * @param type         field type
-     * @param name         field name
-     * @param cp           constant pool
+     * @param type  field type
+     * @param name field name
+     * @param cp constant pool
      */
     public FieldGen(int access_flags, Type type, String name, ConstantPoolGen cp) {
         setAccessFlags(access_flags);
@@ -81,22 +83,28 @@ public class FieldGen extends FieldGenOrMethodGen {
      * Instantiate from existing field.
      *
      * @param field Field object
-     * @param cp    constant pool (must contain the same entries as the field's constant pool)
+     * @param cp constant pool (must contain the same entries as the field's constant pool)
      */
     public FieldGen(Field field, ConstantPoolGen cp) {
         this(field.getAccessFlags(), Type.getType(field.getSignature()), field.getName(), cp);
         Attribute[] attrs = field.getAttributes();
-        for (int i = 0; i < attrs.length; i++) {
-            if (attrs[i] instanceof ConstantValue) {
-                setValue(((ConstantValue) attrs[i]).getConstantValueIndex());
+        for (Attribute attr : attrs) {
+            if (attr instanceof ConstantValue) {
+                setValue(((ConstantValue) attr).getConstantValueIndex());
+            } else if (attr instanceof Annotations) {
+                Annotations runtimeAnnotations = (Annotations)attr;
+                AnnotationEntry[] annotationEntries = runtimeAnnotations.getAnnotationEntries();
+                for (AnnotationEntry element : annotationEntries) {
+                    addAnnotationEntry(new AnnotationEntryGen(element,cp,false));
+                }
             } else {
-                addAttribute(attrs[i]);
+                addAttribute(attr);
             }
         }
     }
 
 
-    private void setValue(int index) {
+    private void setValue( int index ) {
         ConstantPool cp = this.cp.getConstantPool();
         Constant c = cp.getConstant(index);
         value = ((ConstantObject) c).getConstantValue(cp);
@@ -107,15 +115,15 @@ public class FieldGen extends FieldGenOrMethodGen {
      * Set (optional) initial value of field, otherwise it will be set to null/0/false
      * by the JVM automatically.
      */
-    public void setInitValue(String str) {
-        checkType(new ObjectType("java.lang.String"));
+    public void setInitValue( String str ) {
+        checkType(  ObjectType.getInstance("java.lang.String"));
         if (str != null) {
             value = str;
         }
     }
 
 
-    public void setInitValue(long l) {
+    public void setInitValue( long l ) {
         checkType(Type.LONG);
         if (l != 0L) {
             value = new Long(l);
@@ -123,47 +131,47 @@ public class FieldGen extends FieldGenOrMethodGen {
     }
 
 
-    public void setInitValue(int i) {
+    public void setInitValue( int i ) {
         checkType(Type.INT);
         if (i != 0) {
-            value = new Integer(i);
+            value = Integer.valueOf(i);
         }
     }
 
 
-    public void setInitValue(short s) {
+    public void setInitValue( short s ) {
         checkType(Type.SHORT);
         if (s != 0) {
-            value = new Integer(s);
+            value = Integer.valueOf(s);
         }
     }
 
 
-    public void setInitValue(char c) {
+    public void setInitValue( char c ) {
         checkType(Type.CHAR);
         if (c != 0) {
-            value = new Integer(c);
+            value = Integer.valueOf(c);
         }
     }
 
 
-    public void setInitValue(byte b) {
+    public void setInitValue( byte b ) {
         checkType(Type.BYTE);
         if (b != 0) {
-            value = new Integer(b);
+            value = Integer.valueOf(b);
         }
     }
 
 
-    public void setInitValue(boolean b) {
+    public void setInitValue( boolean b ) {
         checkType(Type.BOOLEAN);
         if (b) {
-            value = new Integer(1);
+            value = Integer.valueOf(1);
         }
     }
 
 
-    public void setInitValue(float f) {
+    public void setInitValue( float f ) {
         checkType(Type.FLOAT);
         if (f != 0.0) {
             value = new Float(f);
@@ -171,7 +179,7 @@ public class FieldGen extends FieldGenOrMethodGen {
     }
 
 
-    public void setInitValue(double d) {
+    public void setInitValue( double d ) {
         checkType(Type.DOUBLE);
         if (d != 0.0) {
             value = new Double(d);
@@ -179,15 +187,14 @@ public class FieldGen extends FieldGenOrMethodGen {
     }
 
 
-    /**
-     * Remove any initial value.
+    /** Remove any initial value.
      */
     public void cancelInitValue() {
         value = null;
     }
 
 
-    private void checkType(Type atype) {
+    private void checkType( Type atype ) {
         if (type == null) {
             throw new ClassGenException("You haven't defined the type of the field yet");
         }
@@ -213,9 +220,17 @@ public class FieldGen extends FieldGenOrMethodGen {
             addAttribute(new ConstantValue(cp.addUtf8("ConstantValue"), 2, index, cp
                     .getConstantPool()));
         }
+        addAnnotationsAsAttribute(cp);
         return new Field(access_flags, name_index, signature_index, getAttributes(), cp
                 .getConstantPool());
     }
+
+    private void addAnnotationsAsAttribute(ConstantPoolGen cp) {
+          Attribute[] attrs = Utility.getAnnotationAttributes(cp,annotation_vec);
+        for (Attribute attr : attrs) {
+            addAttribute(attr);
+        }
+      }
 
 
     private int addConstant() {
@@ -240,43 +255,41 @@ public class FieldGen extends FieldGenOrMethodGen {
     }
 
 
+    @Override
     public String getSignature() {
         return type.getSignature();
     }
 
-    private List observers;
+    private List<FieldObserver> observers;
 
 
-    /**
-     * Add observer for this object.
+    /** Add observer for this object.
      */
-    public void addObserver(FieldObserver o) {
+    public void addObserver( FieldObserver o ) {
         if (observers == null) {
-            observers = new ArrayList();
+            observers = new ArrayList<FieldObserver>();
         }
         observers.add(o);
     }
 
 
-    /**
-     * Remove observer for this object.
+    /** Remove observer for this object.
      */
-    public void removeObserver(FieldObserver o) {
+    public void removeObserver( FieldObserver o ) {
         if (observers != null) {
             observers.remove(o);
         }
     }
 
 
-    /**
-     * Call notify() method on all observers. This method is not called
+    /** Call notify() method on all observers. This method is not called
      * automatically whenever the state has changed, but has to be
      * called by the user after he has finished editing the object.
      */
     public void update() {
         if (observers != null) {
-            for (Iterator e = observers.iterator(); e.hasNext(); ) {
-                ((FieldObserver) e.next()).notify(this);
+            for (FieldObserver observer : observers ) {
+                observer.notify(this);
             }
         }
     }
@@ -297,13 +310,14 @@ public class FieldGen extends FieldGenOrMethodGen {
      *
      * @return String representation of field
      */
+    @Override
     public final String toString() {
         String name, signature, access; // Short cuts to constant pool
         access = Utility.accessToString(access_flags);
         access = access.equals("") ? "" : (access + " ");
         signature = type.toString();
         name = getName();
-        StringBuffer buf = new StringBuffer(32);
+        StringBuilder buf = new StringBuilder(32);
         buf.append(access).append(signature).append(" ").append(name);
         String value = getInitValue();
         if (value != null) {
@@ -313,10 +327,9 @@ public class FieldGen extends FieldGenOrMethodGen {
     }
 
 
-    /**
-     * @return deep copy of this field
+    /** @return deep copy of this field
      */
-    public FieldGen copy(ConstantPoolGen cp) {
+    public FieldGen copy( ConstantPoolGen cp ) {
         FieldGen fg = (FieldGen) clone();
         fg.setConstantPool(cp);
         return fg;
@@ -334,7 +347,7 @@ public class FieldGen extends FieldGenOrMethodGen {
     /**
      * @param comparator Comparison strategy object
      */
-    public static void setComparator(BCELComparator comparator) {
+    public static void setComparator( BCELComparator comparator ) {
         _cmp = comparator;
     }
 
@@ -343,10 +356,11 @@ public class FieldGen extends FieldGenOrMethodGen {
      * Return value as defined by given BCELComparator strategy.
      * By default two FieldGen objects are said to be equal when
      * their names and signatures are equal.
-     *
+     * 
      * @see java.lang.Object#equals(java.lang.Object)
      */
-    public boolean equals(Object obj) {
+    @Override
+    public boolean equals( Object obj ) {
         return _cmp.equals(this, obj);
     }
 
@@ -354,9 +368,10 @@ public class FieldGen extends FieldGenOrMethodGen {
     /**
      * Return value as defined by given BCELComparator strategy.
      * By default return the hashcode of the field's name XOR signature.
-     *
+     * 
      * @see java.lang.Object#hashCode()
      */
+    @Override
     public int hashCode() {
         return _cmp.hashCode(this);
     }
