@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,21 +12,22 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
+ *  limitations under the License.
  *
  */
 package org.apache.bcel.generic;
 
-/**
+/** 
  * ICONST - Push value between -1, ..., 5, other values cause an exception
- * <p/>
+ *
  * <PRE>Stack: ... -&gt; ..., </PRE>
  *
- * @author <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
- * @version $Id: ICONST.java 386056 2006-03-15 11:31:56Z tcurdt $
+ * @version $Id: ICONST.java 1627906 2014-09-26 22:41:39Z ebourg $
+ * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
  */
-public class ICONST extends Instruction implements ConstantPushInstruction, TypedInstruction {
+public class ICONST extends Instruction implements ConstantPushInstruction {
 
+    private static final long serialVersionUID = -174595933747784635L;
     private int value;
 
 
@@ -49,14 +51,13 @@ public class ICONST extends Instruction implements ConstantPushInstruction, Type
 
 
     public Number getValue() {
-        return new Integer(value);
+        return Integer.valueOf(value);
     }
 
 
-    /**
-     * @return Type.INT
+    /** @return Type.INT
      */
-    public Type getType(ConstantPoolGen cp) {
+    public Type getType( ConstantPoolGen cp ) {
         return Type.INT;
     }
 
@@ -69,7 +70,8 @@ public class ICONST extends Instruction implements ConstantPushInstruction, Type
      *
      * @param v Visitor object
      */
-    public void accept(Visitor v) {
+    @Override
+    public void accept( Visitor v ) {
         v.visitPushInstruction(this);
         v.visitStackProducer(this);
         v.visitTypedInstruction(this);
