@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,26 +12,28 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
+ *  limitations under the License.
  *
  */
 package org.apache.bcel.generic;
 
-import org.apache.bcel.util.ByteSequence;
-
 import java.io.DataOutputStream;
 import java.io.IOException;
 
-/**
+import org.apache.bcel.util.ByteSequence;
+
+/** 
  * LDC - Push item from constant pool.
- * <p/>
+ *
  * <PRE>Stack: ... -&gt; ..., item</PRE>
  *
- * @author <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
- * @version $Id: LDC.java 386056 2006-03-15 11:31:56Z tcurdt $
+ * @version $Id: LDC.java 1627906 2014-09-26 22:41:39Z ebourg $
+ * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
  */
-public class LDC extends CPInstruction implements PushInstruction, ExceptionThrower,
-        TypedInstruction {
+public class LDC extends CPInstruction implements PushInstruction, ExceptionThrower {
+
+    private static final long serialVersionUID = -972820476154330719L;
+
 
     /**
      * Empty constructor needed for the Class.newInstance() statement in
@@ -60,10 +63,10 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
 
     /**
      * Dump instruction as byte code to stream out.
-     *
      * @param out Output stream
      */
-    public void dump(DataOutputStream out) throws IOException {
+    @Override
+    public void dump( DataOutputStream out ) throws IOException {
         out.writeByte(opcode);
         if (length == 2) {
             out.writeByte(index);
@@ -76,7 +79,8 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
     /**
      * Set the index to constant pool and adjust size.
      */
-    public final void setIndex(int index) {
+    @Override
+    public final void setIndex( int index ) {
         super.setIndex(index);
         setSize();
     }
@@ -85,13 +89,14 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
     /**
      * Read needed data (e.g. index) from file.
      */
-    protected void initFromFile(ByteSequence bytes, boolean wide) throws IOException {
+    @Override
+    protected void initFromFile( ByteSequence bytes, boolean wide ) throws IOException {
         length = 2;
         index = bytes.readUnsignedByte();
     }
 
 
-    public Object getValue(ConstantPoolGen cpg) {
+    public Object getValue( ConstantPoolGen cpg ) {
         org.apache.bcel.classfile.Constant c = cpg.getConstantPool().getConstant(index);
         switch (c.getTag()) {
             case org.apache.bcel.Constants.CONSTANT_String:
@@ -101,16 +106,19 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
             case org.apache.bcel.Constants.CONSTANT_Float:
                 return new Float(((org.apache.bcel.classfile.ConstantFloat) c).getBytes());
             case org.apache.bcel.Constants.CONSTANT_Integer:
-                return new Integer(((org.apache.bcel.classfile.ConstantInteger) c).getBytes());
+                return Integer.valueOf(((org.apache.bcel.classfile.ConstantInteger) c).getBytes());
             case org.apache.bcel.Constants.CONSTANT_Class:
-                return c;
+                int nameIndex = ((org.apache.bcel.classfile.ConstantClass) c).getNameIndex();
+                c = cpg.getConstantPool().getConstant(nameIndex);
+                return new ObjectType(((org.apache.bcel.classfile.ConstantUtf8) c).getBytes());
             default: // Never reached
                 throw new RuntimeException("Unknown or invalid constant type at " + index);
         }
     }
 
 
-    public Type getType(ConstantPoolGen cpg) {
+    @Override
+    public Type getType( ConstantPoolGen cpg ) {
         switch (cpg.getConstantPool().getConstant(index).getTag()) {
             case org.apache.bcel.Constants.CONSTANT_String:
                 return Type.STRING;
@@ -126,7 +134,7 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
     }
 
 
-    public Class[] getExceptions() {
+    public Class<?>[] getExceptions() {
         return org.apache.bcel.ExceptionConstants.EXCS_STRING_RESOLUTION;
     }
 
@@ -139,7 +147,8 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
      *
      * @param v Visitor object
      */
-    public void accept(Visitor v) {
+    @Override
+    public void accept( Visitor v ) {
         v.visitStackProducer(this);
         v.visitPushInstruction(this);
         v.visitExceptionThrower(this);
