@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,20 +12,23 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
+ *  limitations under the License.
  *
  */
 package org.apache.bcel.generic;
 
-/**
+/** 
  * LDC2_W - Push long or double from constant pool
- * <p/>
+ *
  * <PRE>Stack: ... -&gt; ..., item.word1, item.word2</PRE>
  *
- * @author <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
- * @version $Id: LDC2_W.java 386056 2006-03-15 11:31:56Z tcurdt $
+ * @version $Id: LDC2_W.java 1627906 2014-09-26 22:41:39Z ebourg $
+ * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
  */
-public class LDC2_W extends CPInstruction implements PushInstruction, TypedInstruction {
+public class LDC2_W extends CPInstruction implements PushInstruction {
+
+    private static final long serialVersionUID = 7403326732924539892L;
+
 
     /**
      * Empty constructor needed for the Class.newInstance() statement in
@@ -39,7 +43,8 @@ public class LDC2_W extends CPInstruction implements PushInstruction, TypedInstr
     }
 
 
-    public Type getType(ConstantPoolGen cpg) {
+    @Override
+    public Type getType( ConstantPoolGen cpg ) {
         switch (cpg.getConstantPool().getConstant(index).getTag()) {
             case org.apache.bcel.Constants.CONSTANT_Long:
                 return Type.LONG;
@@ -51,11 +56,11 @@ public class LDC2_W extends CPInstruction implements PushInstruction, TypedInstr
     }
 
 
-    public Number getValue(ConstantPoolGen cpg) {
+    public Number getValue( ConstantPoolGen cpg ) {
         org.apache.bcel.classfile.Constant c = cpg.getConstantPool().getConstant(index);
         switch (c.getTag()) {
             case org.apache.bcel.Constants.CONSTANT_Long:
-                return new Long(((org.apache.bcel.classfile.ConstantLong) c).getBytes());
+                return Long.valueOf(((org.apache.bcel.classfile.ConstantLong) c).getBytes());
             case org.apache.bcel.Constants.CONSTANT_Double:
                 return new Double(((org.apache.bcel.classfile.ConstantDouble) c).getBytes());
             default: // Never reached
@@ -72,7 +77,8 @@ public class LDC2_W extends CPInstruction implements PushInstruction, TypedInstr
      *
      * @param v Visitor object
      */
-    public void accept(Visitor v) {
+    @Override
+    public void accept( Visitor v ) {
         v.visitStackProducer(this);
         v.visitPushInstruction(this);
         v.visitTypedInstruction(this);
