@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,9 +12,9 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
+ *  limitations under the License.
  *
- */
+ */ 
 package org.apache.bcel.verifier.statics;
 
 
@@ -23,37 +24,26 @@ import java.util.List;
 /**
  * A small utility class representing a set of basic int values.
  *
+ * @version $Id: IntList.java 1627977 2014-09-27 15:16:23Z ggregory $
  * @author Enver Haase
- * @version $Id: IntList.java 386056 2006-03-15 11:31:56Z tcurdt $
  */
-public class IntList {
-    /**
-     * The int are stored as Integer objects here.
-     */
-    private List theList;
-
-    /**
-     * This constructor creates an empty list.
-     */
-    IntList() {
-        theList = new ArrayList();
+public class IntList{
+    /** The int are stored as Integer objects here. */
+    private final List<Integer> theList;
+    /** This constructor creates an empty list. */
+    IntList(){
+        theList = new ArrayList<Integer>();
     }
-
-    /**
-     * Adds an element to the list.
-     */
-    void add(int i) {
-        theList.add(new Integer(i));
+    /** Adds an element to the list. */
+    void add(int i){
+        theList.add(Integer.valueOf(i));
     }
-
-    /**
-     * Checks if the specified int is already in the list.
-     */
-    boolean contains(int i) {
+    /** Checks if the specified int is already in the list. */
+    boolean contains(int i){
         Integer[] ints = new Integer[theList.size()];
         theList.toArray(ints);
-        for (int j = 0; j < ints.length; j++) {
-            if (i == ints[j].intValue()) {
+        for (Integer k : ints) {
+            if (i == k.intValue()) {
                 return true;
             }
         }
